KBL: igt@gem_ctx_persistence@.*|igt@i915_hangman@engine-hang@.*- Incomplete - GEM_BUG_ON(engine->execlists.pending[0])
Dmesg
<6> [251.764116] [IGT] i915_hangman: starting dynamic subtest bcs0
<7> [251.764402] i915 0000:00:02.0: [drm:i915_gem_context_create_ioctl [i915]] HW context 1 created
<7> [251.765833] i915 0000:00:02.0: [drm:i915_gem_context_create_ioctl [i915]] HW context 1 created
<7> [251.767037] i915 0000:00:02.0: [drm:i915_gem_context_create_ioctl [i915]] HW context 1 created
<5> [261.741135] i915 0000:00:02.0: [drm] Resetting bcs0 for preemption time out
<3> [261.744953] execlists_reset_finish:3075 GEM_BUG_ON(engine->execlists.pending[0])
<0> [261.745631] Dumping ftrace buffer:
<0> [261.745797] ---------------------------------